Tue Jan  8 14:31:04 2002  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (hyperg_1F1_small_a_bgt0): fix branch for a==1

Fri Dec  7 12:38:40 2001  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_n_cp): catch internal error, not global
 	error

	* error.h (INTERNAL_OVERFLOW_ERROR): added internal error macros
 	which do not call the error handler.

Wed Dec  5 19:25:26 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gamma.c (gamma_xgthalf): return gamma(x) exactly when x is an
 	integer

	* hyperg_1F1.c (hyperg_1F1_ab_posint):  fix bug in recurrence
 	initialisation, as done for hyperg_1F1_ab_pos

Thu Oct 18 11:37:25 2001  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb.c (gsl_sf_coulomb_CL_array): renamed from
 	gsl_sf_coulomb_CL_list for consistency

Sat Oct 13 15:55:56 2001  Brian Gough  <bjg@network-theory.co.uk>

	* cheb_eval.c (cheb_eval_e): keep track of cancellation error to
 	prevent underestimates of total error.

Fri Oct 12 16:39:27 2001  Brian Gough  <bjg@network-theory.co.uk>

	* test_hyperg.c (test_hyperg): increased tolerance from TOL0 to
 	TOL1 on one test to allow it to pass under different optimizations

Thu Oct 11 14:21:34 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gegenbauer.c (gsl_sf_gegenpoly_n_e): initialize variable gk to
 	zero to avoid warning

	* bessel_i.c (gsl_sf_bessel_il_scaled_e): initialize variable
 	iellm1 to zero to avoid warning

	* bessel_Jnu.c (gsl_sf_bessel_Jnu_e): initialize variable Ynp1 to
 	zero to avoid warning

	* legendre_poly.c (gsl_sf_legendre_sphPlm_e): initialize variables
 	p_ell, y_ell to zero to avoid warning

Thu Sep  6 10:38:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* clausen.c: added missing initialiser to cheb_series struct

	* pow_int.c (gsl_sf_pow_int_e): handle the case x == 0, n < 0

	* legendre_poly.c (gsl_sf_legendre_array_size): added missing
 	static version of this inline function

Wed Aug 15 20:18:43 2001  Brian Gough  <bjg@network-theory.co.uk>
