@@ -1,5 +1,8 @@
 Tue Jan  8 14:31:04 2002  Brian Gough  <bjg@network-theory.co.uk>
 
+	* test_legendre.c (test_legendre): increased tolerance by one level
+ 	on _array tests
+
 	* hyperg_1F1.c (hyperg_1F1_small_a_bgt0): fix branch for a==1
 
 Fri Dec  7 12:38:40 2001  Brian Gough  <bjg@network-theory.co.uk>
